--- a/pongV4/index.html
+++ b/pongV4/index.html
@@ -13,6 +13,8 @@
 <body>
     <div class="container">
         <canvas id="the-canvas" width="800" height="400"></canvas>
+        <!-- <canvas id="the-canvas" width="500" height="600"></canvas>  -->
+        <!-- max = 2242,1245 -->
     </div>
 
     <script src="main.js"></script>
